--- a/index.html
+++ b/index.html
@@ -21,5 +21,15 @@
     </div>
 
     <script src="script.js"></script>
+    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R61TMFHVHG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R61TMFHVHG');
+</script>
 </body>
 </html>
